Fixed card spacing

--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@
   padding: 3px 25px;
   margin-bottom: 5px;
 }
-.card.zoom {
-  transform: scale(1);
+.card.shrunk {
+  transform: scale(0.4);
+  transform-origin: top left;
 }
 .card {
   text-align: center;
@@ -23,11 +24,14 @@
   font-family: Verdana, Arial;
   box-sizing: border-box;
   padding: 5px;
-  margin-bottom: 40px;
-  margin-right: 40px;
   display: inline-block;
   transition: transform .2s;
-  transform: scale(0.5);
+}
+.wrapper.shrunk {
+  float: left;
+  width: 12.8rem; /* 0.4 x 32rem */
+  height: 17rem;
+  margin: 10px;
 }
 .metercontainer {
   border: 4px solid black;
